welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
	return 
        ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(!estSurBiscuit()){
^